--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,7 @@ tag = "tags"
 category = "categories"
 
 [params]
+google_analytics_id = "UA-111730698-1"
 tagline = "Cloud Native, Open Source, High-performance Messaging"
 favicon = "favicon.ico"
 font_awesome_version = "5.12.0"
