--- a/config.toml
+++ b/config.toml
@@ -15,6 +15,7 @@ tag = "tags"
 category = "categories"
 
 [params]
+privacy_message = "NATS uses cookies to ensure you get the best experience on our website. Continuing to use this site assumes compliance with our [Privacy Policy](/privacy)."
 google_analytics_id = "UA-111730698-1"
 tagline = "Cloud Native, Open Source, High-performance Messaging"
 favicon = "favicon.ico"
