--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "anchor-js": "^4.2.2",
-    "bulma": "^0.8.2"
+    "bulma": "^0.8.2",
+    "bulma-switch": "^2.0.0"
   }
 }
