Update Download page

--- a/data/language.toml
+++ b/data/language.toml
@@ -29,7 +29,7 @@ name = "C"
 org = "nats-io"
 repo= "nats.c"
 suported = true
-author = "Synadia"
+author = "NATS Authors"
 link = "https://github.com/nats-io"
 release_version = '2.1.0'
 release_date = '2019-10-02'
@@ -38,7 +38,7 @@ org = "nats-io"
 repo= "stan.c"
 streaming_support = true
 suported = true
-author = "Synadia"
+author = "NATS Authors"
 link = "https://github.com/nats-io"
 release_version = '2.1.0'
 release_date = '2019-10-02'
@@ -60,8 +60,8 @@ org = "nats-io"
 repo = "nats.net"
 supported = true
 streaming_support = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_version = "0.10.0"
 release_date = "2019-11-18"
 [[language.c-sharp.orgs]]
@@ -79,8 +79,8 @@ name = "Crystal"
 org = "nats-io"
 repo = "nats.cr"
 supported = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_version = "0.0.0"
 release_date = "2019-09-10"
 [[language.crystal.orgs]]
@@ -98,8 +98,8 @@ name = "Elixir"
 org = "nats-io"
 repo = "nats.ex"
 supported = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_version = "0.6.1"
 release_date = "2019-03-03"
 [[language.elixir.orgs]]
@@ -138,11 +138,19 @@ name = "Go"
 org = "nats-io"
 repo = "nats.go"
 supported = true
-streaming_support = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_version = "1.7.2"
 release_date = "2019-02-21"
+[[language.go.orgs]]
+org = "nats-io"
+repo = "stan.go"
+supported = true
+streaming_support = true
+author = "NATS Authors"
+link = "https://github.com/nats-io"
+release_version = "0.7.0"
+release_date = "2020-06-23"
 
 [language.haskell]
 name = "Haskell"
@@ -162,8 +170,8 @@ org = "nats-io"
 repo = "nats.java"
 supported = true
 streaming_support = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_version = "2.6.0"
 release_date = "2019-07-22"
 [[language.java.orgs]]
@@ -252,8 +260,8 @@ name = "NGINX"
 org = "nats-io"
 repo = "nginx-nats"
 supported = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_date = "2015-08-18"
 
 [language.nodejs]
@@ -262,11 +270,19 @@ name = "Node.js"
 org = "nats-io"
 repo = "node-nats"
 supported = true
-streaming_support = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_version = "1.2.6"
 date = "2019-03-29"
+[[language.nodejs.orgs]]
+org = "nats-io"
+repo = "stan.js"
+supported = true
+streaming_support = true
+author = "NATS Authors"
+link = "https://github.com/nats-io"
+release_version = "0.3.2"
+date = "2020-05-12"
 
 [language.pureruby]
 name = "Pure Ruby"
@@ -274,8 +290,8 @@ name = "Pure Ruby"
 org = "nats-io"
 repo = "pure-ruby-nats"
 supported = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_version = "0.6.0"
 release_date = "2019-06-19"
 
@@ -296,8 +312,8 @@ org = "nats-io"
 repo = "nats.py"
 supported = true
 streaming_support = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_version = "0.9.2"
 release_date = "2019-05-31"
 
@@ -307,8 +323,8 @@ name = "Python Tornado"
 org = "nats-io"
 repo = "python-nats"
 supported = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_version = "0.8.0"
 release_date = "2018-09-22"
 
@@ -339,8 +355,8 @@ org = "nats-io"
 repo = "ruby-nats"
 supported = true
 streaming_support = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_version = "0.11.0"
 release_date = "2019-06-09"
 
@@ -384,7 +400,7 @@ name = "TypeScript"
 org = "nats-io"
 repo = "ts-nats"
 supported = true
-author = "Synadia"
-link = "https://synadia.com"
+author = "NATS Authors"
+link = "https://github.com/nats-io"
 release_version = "1.0.4"
 release_date = "2018-08-27"
