Update missing clients Fix GDPR banner

--- a/data/language.toml
+++ b/data/language.toml
@@ -311,7 +311,6 @@ name = "Python Asyncio"
 org = "nats-io"
 repo = "nats.py"
 supported = true
-streaming_support = true
 author = "NATS Authors"
 link = "https://github.com/nats-io"
 release_version = "0.9.2"
@@ -352,9 +351,8 @@ release_date = "2017-08-12"
 name = "Ruby"
 [[language.ruby.orgs]]
 org = "nats-io"
-repo = "ruby-nats"
+repo = "nats.rb"
 supported = true
-streaming_support = true
 author = "NATS Authors"
 link = "https://github.com/nats-io"
 release_version = "0.11.0"
