--- a/data/events.toml
+++ b/data/events.toml
@@ -1,10 +1,34 @@
 [[events]]
 venue = "KubeCon + CloudNativeCon Europe"
-when = "TBD"
+when = "Monday, August 17, 2020 16:55 CEST/ 7:55 PDT"
+who = "Waledmar Quevedo"
+what = "Tutorial | Building Secure & Decentralized Global Applications on k8s with NATS"
+where = "Virtual"
+ref = "https://sched.co/Zekp"
+
+[[events]]
+venue = "KubeCon + CloudNativeCon Europe"
+when = "Tuesday, August 18, 2020 18:30 CEST/ 9:30 PDT"
+who = "Colin Sullivan"
+what = "Easy, Secure, & Fast - Using NATS for Data Streams & Services"
+where = "Virtual"
+ref = "https://sched.co/Zewv"
+
+[[events]]
+venue = "KubeCon + CloudNativeCon Europe"
+when = "Wednesday, August 19, 2020 16:55 CEST/ 7:55 PDT"
+who = "Waldemar Quevedo"
+what = "Deep Dive Into Building a Secure & Multi-tenant SaaS Solution with NATS"
+where = "Virtual"
+ref = "https://sched.co/Zext"
+
+[[events]]
+venue = "KubeCon + CloudNativeCon Europe"
+when = "Thursday, August 20, 2020 17:00 CEST/ 8:00 PDT"
 who = "The NATS Team"
-what = "NATS Maintainer Track Talks"
-where = "Amsterdam, The Netherlands"
-ref = "https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/"
+what = "Meet the Maintainers - NATS Project Office Hours"
+where = "Virtual"
+ref = "https://sched.co/djV6"
 
 
 # comment out to save
