--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -769,30 +769,30 @@ Releases:
   author:
     - name:
       link:
-  version_num: 2.1.7
+  version_num: 2.1.8
   release_notes: |
-    Release v2.1.7 on May 14th, 2020.
+    Release v2.1.8 on September 3rd, 2020.
   github:
     - user: nats-io
       repo: nats-server
       link: https://github.com/nats-io/nats-server
   links:
-  - name: nats-server-v2.1.7-darwin-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.7/nats-server-v2.1.7-darwin-amd64.zip
-  - name: nats-server-v2.1.7-linux-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.7/nats-server-v2.1.7-linux-amd64.zip
-  - name: nats-server-v2.1.7-linux-386.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.7/nats-server-v2.1.7-linux-386.zip
-  - name: nats-server-v2.1.7-linux-arm6.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.7/nats-server-v2.1.7-linux-arm6.zip
-  - name: nats-server-v2.1.7-linux-arm7.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.7/nats-server-v2.1.7-linux-arm7.zip
-  - name: nats-server-v2.1.7-linux-arm64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.7/nats-server-v2.1.7-linux-arm64.zip
-  - name: nats-server-v2.1.7-windows-386.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.7/nats-server-v2.1.7-windows-386.zip
-  - name: nats-server-v2.1.7-windows-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.7/nats-server-v2.1.7-windows-amd64.zip
+  - name: nats-server-v2.1.8-darwin-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-darwin-amd64.zip
+  - name: nats-server-v2.1.8-linux-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-linux-amd64.zip
+  - name: nats-server-v2.1.8-linux-386.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-linux-386.zip
+  - name: nats-server-v2.1.8-linux-arm6.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-linux-arm6.zip
+  - name: nats-server-v2.1.8-linux-arm7.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-linux-arm7.zip
+  - name: nats-server-v2.1.8-linux-arm64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-linux-arm64.zip
+  - name: nats-server-v2.1.8-windows-386.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-windows-386.zip
+  - name: nats-server-v2.1.8-windows-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-windows-amd64.zip
   - name: Official Docker Image
     url: https://hub.docker.com/_/nats/
 
