--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -161,9 +161,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.9.2
+  version_num: 0.11.2
   release_notes: |
-    Release v0.9.2 on May 31, 2019.
+    Release v0.11.2 on September 14th, 2020.
   github:
     - user: nats-io
       repo: nats.py
