--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -769,30 +769,30 @@ Releases:
   author:
     - name:
       link:
-  version_num: 2.1.8
+  version_num: 2.1.9
   release_notes: |
-    Release v2.1.8 on September 3rd, 2020.
+    Release v2.1.9 on November 2nd, 2020.
   github:
     - user: nats-io
       repo: nats-server
       link: https://github.com/nats-io/nats-server
   links:
-  - name: nats-server-v2.1.8-darwin-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-darwin-amd64.zip
-  - name: nats-server-v2.1.8-linux-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-linux-amd64.zip
-  - name: nats-server-v2.1.8-linux-386.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-linux-386.zip
-  - name: nats-server-v2.1.8-linux-arm6.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-linux-arm6.zip
-  - name: nats-server-v2.1.8-linux-arm7.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-linux-arm7.zip
-  - name: nats-server-v2.1.8-linux-arm64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-linux-arm64.zip
-  - name: nats-server-v2.1.8-windows-386.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-windows-386.zip
-  - name: nats-server-v2.1.8-windows-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.1.8/nats-server-v2.1.8-windows-amd64.zip
+  - name: nats-server-v2.1.9-darwin-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.9/nats-server-v2.1.9-darwin-amd64.zip
+  - name: nats-server-v2.1.9-linux-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.9/nats-server-v2.1.9-linux-amd64.zip
+  - name: nats-server-v2.1.9-linux-386.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.9/nats-server-v2.1.9-linux-386.zip
+  - name: nats-server-v2.1.9-linux-arm6.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.9/nats-server-v2.1.9-linux-arm6.zip
+  - name: nats-server-v2.1.9-linux-arm7.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.9/nats-server-v2.1.9-linux-arm7.zip
+  - name: nats-server-v2.1.9-linux-arm64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.9/nats-server-v2.1.9-linux-arm64.zip
+  - name: nats-server-v2.1.9-windows-386.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.9/nats-server-v2.1.9-windows-386.zip
+  - name: nats-server-v2.1.9-windows-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.1.9/nats-server-v2.1.9-windows-amd64.zip
   - name: Official Docker Image
     url: https://hub.docker.com/_/nats/
 
@@ -803,29 +803,29 @@ Releases:
   author:
     - name:
       link:
-  version_num: 0.18.0
+  version_num: 0.19.0
   release_notes: |
-    Release v0.18.0 June 24th, 2020.
+    Release v0.19.0 November 2nd, 2020.
   github:
     - user: nats-io
       repo: nats-streaming-server
       link: https://github.com/nats-io/nats-streaming-server
   links:
-  - name: nats-streaming-server-v0.18.0-darwin-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.18.0/nats-streaming-server-v0.18.0-darwin-amd64.zip
-  - name: nats-streaming-server-v0.18.0-linux-386.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.18.0/nats-streaming-server-v0.18.0-linux-386.zip
-  - name: nats-streaming-server-v0.18.0-linux-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.18.0/nats-streaming-server-v0.18.0-linux-amd64.zip
-  - name: nats-streaming-server-v0.18.0-linux-arm6.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.18.0/nats-streaming-server-v0.18.0-linux-arm6.zip
-  - name: nats-streaming-server-v0.18.0-linux-arm7.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.18.0/nats-streaming-server-v0.18.0-linux-arm7.zip
-  - name: nats-streaming-server-v0.18.0-linux-arm64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.18.0/nats-streaming-server-v0.18.0-linux-arm64.zip
-  - name: nats-streaming-server-v0.18.0-windows-386.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.18.0/nats-streaming-server-v0.18.0-windows-386.zip
-  - name: nats-streaming-server-v0.18.0-windows-amd64.zip
-    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.18.0/nats-streaming-server-v0.18.0-windows-amd64.zip
+  - name: nats-streaming-server-v0.19.0-darwin-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.19.0/nats-streaming-server-v0.19.0-darwin-amd64.zip
+  - name: nats-streaming-server-v0.19.0-linux-386.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.19.0/nats-streaming-server-v0.19.0-linux-386.zip
+  - name: nats-streaming-server-v0.19.0-linux-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.19.0/nats-streaming-server-v0.19.0-linux-amd64.zip
+  - name: nats-streaming-server-v0.19.0-linux-arm6.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.19.0/nats-streaming-server-v0.19.0-linux-arm6.zip
+  - name: nats-streaming-server-v0.19.0-linux-arm7.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.19.0/nats-streaming-server-v0.19.0-linux-arm7.zip
+  - name: nats-streaming-server-v0.19.0-linux-arm64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.19.0/nats-streaming-server-v0.19.0-linux-arm64.zip
+  - name: nats-streaming-server-v0.19.0-windows-386.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.19.0/nats-streaming-server-v0.19.0-windows-386.zip
+  - name: nats-streaming-server-v0.19.0-windows-amd64.zip
+    url: https://github.com/nats-io/nats-streaming-server/releases/download/v0.19.0/nats-streaming-server-v0.19.0-windows-amd64.zip
   - name: Official Docker Image
     url: https://hub.docker.com/_/nats-streaming/
