--- a/data/companies.toml
+++ b/data/companies.toml
@@ -69,6 +69,11 @@ name = "LaunchDarkly"
 home = "https://www.launchdarkly.com"
 logo = "/img/companies/launchdarkly.png"
 
+[companies.nsci]
+name = "NSCI"
+home = "https://www.nsci.io"
+logo = "/img/companies/nsci.png"
+
 # [companies.pex]
 # name = "Pex"
 # home = "https://www.pex.com"
