--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -23,9 +23,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 2.3.0
+  version_num: 2.4.0
   release_notes: |
-    Release v2.3.0 on October 16th, 2020.
+    Release v2.4.0 on March 23rd, 2021.
   github:
     - user: nats-io
       repo: nats.c
@@ -38,9 +38,9 @@ Releases:
   author:
     - name:
       link:
-  version_num: 2.3.0
+  version_num: 2.4.0
   release_notes: |
-    Release v2.3.0 on October 16th, 2020.
+    Release v2.4.0 on March 23rd, 2021.
   github:
     - user: nats-io
       repo: stan.c
