--- a/data/addons.toml
+++ b/data/addons.toml
@@ -413,6 +413,24 @@ support = "Synadia"
 [[addons.nats_replicator.authors]]
 author = "NATS Team"
 
+[addons.spring_nats_server]
+name = "Spring NATS Server"
+home = "https://github.com/YunaBraska/nats-server-embedded"
+description = "Spring NATS Server for unit testing."
+support = "Community"
+[[addons.spring_nats_server.authors]]
+author = "Yuna Morgenstern"
+authorHome = "https://github.com/YunaBraska"
+
+[addons.java_nats_server]
+name = "Java NATS Server"
+home = "https://github.com/YunaBraska/nats-server"
+description = "Java NATS Server for unit testing."
+support = "Community"
+[[addons.java_nats_server.authors]]
+author = "Yuna Morgenstern"
+authorHome = "https://github.com/YunaBraska"
+
 [addons.spring_nats_streaming_server]
 name = "Spring NATS Streaming Server"
 home = "https://github.com/YunaBraska/nats-streaming-server-embedded"
@@ -430,6 +448,24 @@ support = "Community"
 [[addons.java_nats_streaming_server.authors]]
 author = "Yuna Morgenstern"
 authorHome = "https://github.com/YunaBraska"
+
+[addons.ballerina_nats_server]
+name = "Ballerina NATS Server"
+home = "https://github.com/ballerina-platform/module-ballerinax-nats"
+description = "This package provides the capability to connect with NATS Server."
+support = "Community"
+[[addons.ballerina_nats_server.authors]]
+author = "Ballerina"
+authorHome = "https://github.com/ballerina-platform"
+
+[addons.ballerina_nats_streaming_server]
+name = "Ballerina NATS Streaming Server"
+home = "https://github.com/ballerina-platform/module-ballerinax-stan"
+description = "This package provides the capability to connect with NATS Streaming Server."
+support = "Community"
+[[addons.ballerina_nats_streaming_server.authors]]
+author = "Ballerina"
+authorHome = "https://github.com/ballerina-platform"
 
 #[addons.xxx]
 #name = ""
