--- a/data/releases.yaml
+++ b/data/releases.yaml
@@ -814,30 +814,30 @@ Releases:
   author:
     - name:
       link:
-  version_num: 2.2.0
+  version_num: 2.2.1
   release_notes: |
-    Release v2.2.0 on March 14th, 2021.
+    Release v2.2.1 on April 2nd, 2021.
   github:
     - user: nats-io
       repo: nats-server
       link: https://github.com/nats-io/nats-server
   links:
-  - name: nats-server-v2.2.0-darwin-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.2.0/nats-server-v2.2.0-darwin-amd64.zip
-  - name: nats-server-v2.2.0-linux-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.2.0/nats-server-v2.2.0-linux-amd64.zip
-  - name: nats-server-v2.2.0-linux-386.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.2.0/nats-server-v2.2.0-linux-386.zip
-  - name: nats-server-v2.2.0-linux-arm6.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.2.0/nats-server-v2.2.0-linux-arm6.zip
-  - name: nats-server-v2.2.0-linux-arm7.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.2.0/nats-server-v2.2.0-linux-arm7.zip
-  - name: nats-server-v2.2.0-linux-arm64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.2.0/nats-server-v2.2.0-linux-arm64.zip
-  - name: nats-server-v2.2.0-windows-386.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.2.0/nats-server-v2.2.0-windows-386.zip
-  - name: nats-server-v2.2.0-windows-amd64.zip
-    url: https://github.com/nats-io/nats-server/releases/download/v2.2.0/nats-server-v2.2.0-windows-amd64.zip
+  - name: nats-server-v2.2.1-darwin-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.2.1/nats-server-v2.2.1-darwin-amd64.zip
+  - name: nats-server-v2.2.1-linux-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.2.1/nats-server-v2.2.1-linux-amd64.zip
+  - name: nats-server-v2.2.1-linux-386.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.2.1/nats-server-v2.2.1-linux-386.zip
+  - name: nats-server-v2.2.1-linux-arm6.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.2.1/nats-server-v2.2.1-linux-arm6.zip
+  - name: nats-server-v2.2.1-linux-arm7.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.2.1/nats-server-v2.2.1-linux-arm7.zip
+  - name: nats-server-v2.2.1-linux-arm64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.2.1/nats-server-v2.2.1-linux-arm64.zip
+  - name: nats-server-v2.2.1-windows-386.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.2.1/nats-server-v2.2.1-windows-386.zip
+  - name: nats-server-v2.2.1-windows-amd64.zip
+    url: https://github.com/nats-io/nats-server/releases/download/v2.2.1/nats-server-v2.2.1-windows-amd64.zip
   - name: Official Docker Image
     url: https://hub.docker.com/_/nats/
 
