--- a/data/language.toml
+++ b/data/language.toml
@@ -73,6 +73,17 @@ link = "https://github.com/danielwertheim"
 release_version = "0.10.0"
 release_date = "2017-01-10"
 
+[language.lisp]
+name = "Common Lisp"
+[[language.lisp.orgs]]
+org = "ccqpein"
+repo = "nats-cl"
+supported = false
+author = "ccQ"
+link = "https://github.com/ccqpein"
+release_version = "0.1.0"
+release_date = ""
+
 [language.crystal]
 name = "Crystal"
 [[language.crystal.orgs]]
@@ -268,12 +279,12 @@ release_date = "2015-08-18"
 name = "Node.js"
 [[language.nodejs.orgs]]
 org = "nats-io"
-repo = "node-nats"
+repo = "nats.js"
 supported = true
 author = "NATS Authors"
 link = "https://github.com/nats-io"
-release_version = "1.2.6"
-date = "2019-03-29"
+release_version = "2.0.2"
+date = "2021-04-05"
 [[language.nodejs.orgs]]
 org = "nats-io"
 repo = "stan.js"
@@ -315,6 +326,15 @@ author = "NATS Authors"
 link = "https://github.com/nats-io"
 release_version = "0.9.2"
 release_date = "2019-05-31"
+
+[language.python_minimal]
+name = "Python Minimal"
+[[language.python_minimal.orgs]]
+org = "goingnats"
+repo = "goingnats"
+supported = false
+author = "Eugene Van Den Bulke"
+link = "https://github.com/3kwa"
 
 [language.python_tornado]
 name = "Python Tornado"
@@ -361,6 +381,14 @@ release_date = "2019-06-09"
 [language.rust]
 name = "Rust"
 [[language.rust.orgs]]
+org = "nats-io"
+repo = "nats.rs"
+supported = true
+author = "NATS Authors"
+link = "https://github.com/nats-io"
+release_version = "0.9.11"
+release_date = "2021-04-12"
+[[language.rust.orgs]]
 org = "davidmcneil"
 repo = "rants"
 supported = false
@@ -391,6 +419,15 @@ author = "Firman Maulana"
 link = "https://github.com/kakilangit"
 release_version = "3.0.0-alpha.1"
 release_date = "2016-08-28"
+
+[language.tcl]
+name = "Tcl"
+[[language.tcl.orgs]]
+org = "kazmirchuk"
+repo = "nats-tcl"
+supported = false
+author = "Petro Kazmirchuk"
+link = "https://github.com/kazmirchuk"
 
 [language.typescript]
 name = "TypeScript"
