--- a/data/servers.yaml
+++ b/data/servers.yaml
@@ -6,22 +6,23 @@
     name: Synadia
     link: https://synadia.com
   release:
-    version: '2.1.4'
-    date: '2020-01-31'
+    version: '2.2.1'
+    date: '2021-04-02'
   docker: nats
   prefix: nats-server
   official: true
-- title: NATS Streaming Server
-  org: nats-io
-  repo: nats-streaming-server
-  language: Go
-  author:
-    name: Synadia
-    link: https://synadia.com
-  release:
-    version: '0.17.0'
-    date: '2020-02-11'
-  docker: nats-streaming
-  prefix: nats-streaming
-  official: true
-  streaming_support: true
+
+#- title: NATS Streaming Server
+#  org: nats-io
+#  repo: nats-streaming-server
+#  language: Go
+#  author:
+#    name: Synadia
+#    link: https://synadia.com
+#  release:
+#    version: '0.17.0'
+#    date: '2020-02-11'
+#  docker: nats-streaming
+#  prefix: nats-streaming
+#  official: true
+#  streaming_support: true
