remove streaming server clients add What's New in NATS 2.2 Blog update navbar NATS icon

--- a/data/language.toml
+++ b/data/language.toml
@@ -29,6 +29,7 @@ name = "C"
 org = "nats-io"
 repo= "nats.c"
 suported = true
+jetstream_support = false
 author = "NATS Authors"
 link = "https://github.com/nats-io"
 release_version = '2.1.0'
@@ -149,6 +150,7 @@ name = "Go"
 org = "nats-io"
 repo = "nats.go"
 supported = true
+jetstream_support = true
 author = "NATS Authors"
 link = "https://github.com/nats-io"
 release_version = "1.7.2"
@@ -180,6 +182,7 @@ name = "Java"
 org = "nats-io"
 repo = "nats.java"
 supported = true
+jetstream_support = true
 streaming_support = true
 author = "NATS Authors"
 link = "https://github.com/nats-io"
