--- a/config.toml
+++ b/config.toml
@@ -75,8 +75,8 @@ url = "https://stackoverflow.com/questions/tagged/nats.io"
 color = "stack-orange"
 
 [params.logos]
-navbar = "nats-horizontal-color.png"
-navbar_home = "nats-horizontal-white.png"
+navbar = "nats-icon-color.png"
+navbar_home = "nats-icon-white.png"
 hero = "nats-horizontal-color.png"
 footer_dark = "nats-icon-color.png"
 footer_light = "nats-icon-color.png"
